--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
     "react-scripts": "0.8.1"
   },
   "dependencies": {
+    "axios": "^0.15.3",
+    "flux": "^3.1.0",
+    "material-ui": "^0.16.4",
     "react": "^15.4.1",
     "react-dom": "^15.4.1"
   },
