--- a/package.json
+++ b/package.json
@@ -51,7 +51,9 @@
     "flux": "^3.1.0",
     "material-ui": "^0.16.4",
     "react": "^15.4.1",
-    "react-dom": "^15.4.1"
+    "react-dom": "^15.4.1",
+    "react-router": "^3.0.0",
+    "react-tap-event-plugin": "^2.0.1"
   },
   "scripts": {
     "start": "node scripts/start.js",
