adding flux structure, adding logged user verification

--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
   },
   "dependencies": {
     "axios": "^0.15.3",
+    "bluebird": "^3.4.6",
     "flux": "^3.1.0",
     "material-ui": "^0.16.4",
     "react": "^15.4.1",
