adjusting environment variables

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "react-js",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://lucandrade.github.io/contact-list-reactjs",
   "devDependencies": {
     "autoprefixer": "6.5.1",
     "babel-core": "6.17.0",
